Fixed flexbox properties for the timer display so that the content doesn't stretch . Added the width property to the 'timer-controller' container.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -28,8 +28,8 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
@@ -40,7 +40,8 @@ button {
 }
 #timer-display {
   margin: 1rem;
-  padding: 2rem 0;
+
+  padding: 2rem 6rem;
   border: 0.2rem solid $color7;
   border-radius: 20rem;
   text-align: center;
@@ -74,6 +75,8 @@ button {
 .timer-controller {
   display: flex;
   justify-content: space-between;
+  width: 20rem;
+
   margin: 2rem;
 }
 
